--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,7 @@
-bin_PROGRAMS = main
+bin_PROGRAMS = main process-vmalloc
 
 
 AM_CPPFLAGS = -I$(top_srcdir)/ -I$(top_srcdir)/lib
 
 main_SOURCES = main.c
+process_vmalloc_SOURCES = process-vmalloc.c
