fdp1-test: CRC the buffer

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,5 +3,5 @@ bin_PROGRAMS = fdp1-test process-vmalloc
 
 AM_CPPFLAGS = -I$(top_srcdir)/ -I$(top_srcdir)/lib
 
-fdp1_test_SOURCES = fdp1-test.c
+fdp1_test_SOURCES = fdp1-test.c crc.c
 process_vmalloc_SOURCES = process-vmalloc.c
