fdp1: Provide initial fdp1-unit-test application
this will deprecate the previous fdp1-test, and provide a clean start
for a set of basic and essential tests for the FDP1 driver

--- a/configure.ac
+++ b/configure.ac
@@ -25,5 +25,5 @@ AC_C_BIGENDIAN
 
 # Checks for library functions.
 
-AC_CONFIG_FILES([Makefile src/Makefile scripts/Makefile])
+AC_CONFIG_FILES([Makefile src/Makefile src/fdp1-unit-test/Makefile scripts/Makefile])
 AC_OUTPUT
