fdp1-unit-test: Add open close test

--- a/src/fdp1-unit-test/Makefile.am
+++ b/src/fdp1-unit-test/Makefile.am
@@ -1,4 +1,7 @@
 bin_PROGRAMS = fdp1-unit-test
 
 fdp1_unit_test_SOURCES = \
-	fdp1-unit-tests.c
+	fdp1-unit-tests.c \
+	fdp1-v4l2-helpers.c \
+	01-fdp1-open.c
+
