fdp1-unit-tests: Provide buffer pool allocator

--- a/src/fdp1-unit-test/Makefile.am
+++ b/src/fdp1-unit-test/Makefile.am
@@ -3,5 +3,6 @@ bin_PROGRAMS = fdp1-unit-test
 fdp1_unit_test_SOURCES = \
 	fdp1-unit-tests.c \
 	fdp1-v4l2-helpers.c \
-	01-fdp1-open.c
+	01-fdp1-open.c \
+	02-fdp1-allocation.c
 
