fdp1-unit-tests: Streamon M2M tests

--- a/src/fdp1-unit-test/Makefile.am
+++ b/src/fdp1-unit-test/Makefile.am
@@ -4,5 +4,6 @@ fdp1_unit_test_SOURCES = \
 	fdp1-unit-tests.c \
 	fdp1-v4l2-helpers.c \
 	01-fdp1-open.c \
-	02-fdp1-allocation.c
+	02-fdp1-allocation.c \
+	03-fdp1-streamon.c
 
