--- a/src/fdp1-unit-test/Makefile.am
+++ b/src/fdp1-unit-test/Makefile.am
@@ -3,6 +3,7 @@ bin_PROGRAMS = fdp1-unit-test
 fdp1_unit_test_SOURCES = \
 	fdp1-unit-tests.c \
 	fdp1-v4l2-helpers.c \
+	fdp1-buffer.c \
 	01-fdp1-open.c \
 	02-fdp1-allocation.c \
 	03-fdp1-streamon.c
