fdp1-unit-tests: Add progressive frame test

--- a/src/fdp1-unit-test/Makefile.am
+++ b/src/fdp1-unit-test/Makefile.am
@@ -6,5 +6,6 @@ fdp1_unit_test_SOURCES = \
 	fdp1-buffer.c \
 	01-fdp1-open.c \
 	02-fdp1-allocation.c \
-	03-fdp1-streamon.c
+	03-fdp1-streamon.c \
+	04-fdp1-progressive.c
 
