fdp1-unit-tests: Add deinterlacing test

--- a/src/fdp1-unit-test/Makefile.am
+++ b/src/fdp1-unit-test/Makefile.am
@@ -7,5 +7,6 @@ fdp1_unit_test_SOURCES = \
 	01-fdp1-open.c \
 	02-fdp1-allocation.c \
 	03-fdp1-streamon.c \
-	04-fdp1-progressive.c
+	04-fdp1-progressive.c \
+	05-fdp1-deinterlace.c
 
