V4L2: Include V4L2 Controls header from v4.19.
Provide an updated header to ensure we can obtain the correct control value
for the CID_DEINTERLACE_MODE control.

Signed-off-by: Kieran Bingham <kieran@bingham.xyz>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,7 +3,7 @@ SUBDIRS = fdp1-unit-test
 bin_PROGRAMS = fdp1-test process-vmalloc
 
 
-AM_CPPFLAGS = -I$(top_srcdir)/ -I$(top_srcdir)/lib
+AM_CPPFLAGS = -I$(top_srcdir)/ -I$(top_srcdir)/lib -I$(top_srcdir)/include/
 
 fdp1_test_SOURCES = fdp1-test.c crc.c
 process_vmalloc_SOURCES = process-vmalloc.c
